--- a/week2/index.html
+++ b/week2/index.html
@@ -84,6 +84,7 @@
     <script src="./js/assignment_2.js"></script>
     <script src="./js/assignment_3.js"></script>
     <script src="./js/assignment_4.js"></script>
+    <script src="./js/assignment_5.js"></script>
 </body>
 
 </html>
