Create :white_check_mark: create week4_Assignment4

--- a/week4_Assignment4/index.html
+++ b/week4_Assignment4/index.html
@@ -5,11 +5,15 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Remote-assignments_Week4</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <title>week4_Assignment4</title>
 </head>
 
 <body>
-    <ul class="render-data"></ul>
+    <div id="repos-list"></div>
+    <div class="btn-container">
+        <button id="load-more" class="btn">More</button>
+    </div>
     <script src="./js/index.js"></script>
 </body>
 
